added admin role in tokens payload, rewrited method GetByLogin, moved token generation of tokens from handler to service
